#2 #7 Create layout-skeleton + start Header

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,7 @@
   --color-brand-blue: #99B2DD;
   --color-brand-neon: #9DFFF9;
   --color-brand-green: #64F58D;
+  --color-brand-lightgrey: #EDECEB;
 }
 
 /* Base-CSS File */
